// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches Boreal lift list correctly 1`] = `
Object {
  "lifts": Array [
    Object {
      "category": "Accelorator Zone",
      "name": "Sunrise Blvd",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Road Island",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Sunset Blvd",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Klondike",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Race Course",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Lower Cut",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Sierra",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "His",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Prospector",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Bonanza",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "name": "Kangaroo Cornice",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "Rick's Return",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "South 40",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "Walt's Run",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "Murphy's Way",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "Adventure Trail",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "name": "Kiss A Bear",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "name": "Chukker",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "name": "Ptarmigam",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "name": "Waterfall",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "name": "Mogul Rock",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Juniper",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Mariposa",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Cedar Return",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Yours",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Hers",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Ponderosa",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "name": "Tamarack",
      "status": "open",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "Central Pacific",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "Blizzard Ridge",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "Westward Ho",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "Undertow",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "D. & R. G.",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "name": "Dutchman Gully",
      "status": "closed",
    },
  ],
}
`;

exports[`fetches Boreal trail list correctly 1`] = `
Object {
  "trails": Array [
    Object {
      "category": "Accelorator Zone",
      "level": "beginner",
      "name": "Sunrise Blvd",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Road Island",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "beginner",
      "name": "Sunset Blvd",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Klondike",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Race Course",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "beginner",
      "name": "Lower Cut",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Sierra",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "His",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Prospector",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Bonanza",
      "status": "open",
    },
    Object {
      "category": "Accelorator Zone",
      "level": "advanced",
      "name": "Kangaroo Cornice",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "Rick's Return",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "South 40",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "Walt's Run",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "Murphy's Way",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "Adventure Trail",
      "status": "open",
    },
    Object {
      "category": "Beginner Zone",
      "level": "beginner",
      "name": "Kiss A Bear",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "level": "advanced",
      "name": "Chukker",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "level": "advanced",
      "name": "Ptarmigam",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "level": "advanced",
      "name": "Waterfall",
      "status": "open",
    },
    Object {
      "category": "49er Zone",
      "level": "advanced",
      "name": "Mogul Rock",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Juniper",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Mariposa",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Cedar Return",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Yours",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Hers",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Ponderosa",
      "status": "open",
    },
    Object {
      "category": "Cedar Ridge Zone",
      "level": "advanced",
      "name": "Tamarack",
      "status": "open",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "Central Pacific",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "Blizzard Ridge",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "Westward Ho",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "Undertow",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "D. & R. G.",
      "status": "closed",
    },
    Object {
      "category": "Flying Dutchman Zone",
      "level": "advanced",
      "name": "Dutchman Gully",
      "status": "closed",
    },
  ],
}
`;
